# remove_ground_pcl

./: Dockerfile  docker-compose.yml
src/: CMakeLists.txt  main.cpp  run_all.sh  visualizer.py
